deployments/ns.yaml
# 创建命名空间
apiVersion: v1
kind: Namespace
metadata:
  name: php-test
spec:
  finalizers:
    - kubernetes
