deployments/app-caculate-nginx-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: caculate-standalone-fcgi
  namespace: php-test
  labels:
    app: caculate-standalone-fcgi
spec:
  ports:
  - port: 9000
    targetPort: 9000
    name: fastcgi
  selector:
    app: caculate-standalone

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "ng-ingress-cal"
    nginx.ingress.kubernetes.io/backend-protocol: "FCGI"
    nginx.ingress.kubernetes.io/fastcgi-index: "index.php"
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #       location / {
    #         try_files $uri $uri/ /index.php?$args;
    #       }
    nginx.ingress.kubernetes.io/fastcgi-params-configmap: "caculate-nginx-ingress-config"
  name: caculate-nginx-ingress
  namespace: php-test
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: caculate-standalone
          servicePort: 9000
